fix profile image in navBar

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         class="navbar shadow-lg navbar-expand-lg navbar-light bg-light col-9"
       >
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">MT-chating</a>
+          <a class="navbar-brand" id="usernameNav" href="#">MT-chating</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -289,6 +289,13 @@
               </li>
             </ul>
             <form class="d-flex gap-2">
+              <div
+                id="profile-image-nav"
+                class=""
+              >
+              <img id="profile-user" src="https://www.shutterstock.com/image-vector/default-avatar-profile-icon-social-600nw-1677509740.jpg";
+              alt="" class="rounded-circle" style="width: 40px;height: 40px;">
+            </div>
               <button
                 type="button"
                 id="loginbtnnav"
